--- a/style.css
+++ b/style.css
@@ -12,12 +12,12 @@ body{
     font-family: 'Open sans', sans-serif;
 }
 nav{
-    width: 85%;
+    width: 85%; 
     height: 15vh;
     margin: auto;
     display: flex;
     justify-content: space-between;
-    align-items: center;    
+    align-items: center;
 }
 .logo{
     width: 130px;
@@ -34,7 +34,7 @@ ul.navbar li{
 ul.navbar li a{
     text-decoration: none;
     color: #fff;
-}
+} 
 ul.navbar li a:hover{
     text-decoration: underline;
 }
@@ -52,6 +52,7 @@ ul.navbar li a:hover{
 .illustration{
     width: 470px;
     margin-bottom: 30px;
+    text-align: center;
 }
 .intro-desc h1{
     font-size: 2rem;
@@ -84,14 +85,15 @@ ul.navbar li a:hover{
     top: -210px;
     z-index: -1;
 }
+/*Section 2 starts here */
 .section-2{
     width: 100%;
     height: auto;
     background: hsl(218, 28%, 12%);
     position: relative;
     top: -210px;
+    text-align: center;
     z-index: -1;
-
 }
 .services{
     width: 70px;
@@ -103,6 +105,14 @@ ul.navbar li a:hover{
     flex-wrap: wrap;
     text-align: center;
 }
+.service-wrapper{
+    margin: 30px 0; 
+}
+.service-wrapper{
+    width: 70px;
+    height: auto;
+    margin-bottom: 25px;
+}
 .service-desc{
     width: 400px;
     line-height: 1.5rem;
@@ -112,8 +122,168 @@ ul.navbar li a:hover{
     font-size: 1.2rem;
     font-family: 'Raleway', open sans;
     margin-bottom: 10px;
+}
+/*Section 3 starts here */
+.section-3 img{
+    width: 550px;
+    height: auto;
+}
+.section-3{
+    width: 85%;
+    margin: 30px auto 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.section-3-desc{
+    width: 550px;
+}
+.section-3-desc h1{
+    font-size: 2rem;
+    width: 300px;
+    margin-bottom: 15px;
+    font-family: 'Raleway', sans-serif;
+}
+.section-3-desc p{
+    margin-bottom: 30px;
+}
+.section-3-desc a{
+    color: #595959;
+    margin-right: 7px;
+}
+/* Testimonial section starts here*/
+
+.testimonial-section{
+    width: 90%;
+    min-height: 70vh;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    text-align: center;
+    position: relative;
+}
+.testimonial-card{
+    width: 385px;
+    height: 200px;
+    background: hsl(219, 30%, 18%);
+    padding: 25px 15px;
+    box-shadow: 2px 2px hsl(217, 27%, 20%);
+}
+.testimonial-desc{
+    width: 345px;
+    font-size: 14px;
+    line-height: 1.5rem;
+}
+.profile.wrapper{
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
+   
+}
+.profile{
+    width: 50px;
+    height: 50px;
+    background: url(..profile-1.jpg);
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+}
+.profile-desc span{
+    font-size: 14px;
+    color: #f3f3f3;
+}
+.profile-2{
+    background: url(..profile-2.jpg);
+    background-size: cover;
+    background-position: center;
+}
+.profile-3{
+    background: url(..profile-3.jpg);
+    background-size: cover;
+    background-position: center;
+}
+.sign-up-section{
+    width: 60%;
+    height: 35vh;
+    margin: auto;
+    background-color: hsl(219, 30%, 18%);
+    border-radius: 5px;
+    display: flex;
+    text-align: center;
+    padding: 20px;
+    z-index: 1;
+    position: relative;
+    box-shadow: 3px 3px rgba(0, 0, 0, 5);
+    text-align: center;
+}
+.sign-up-desc h1{
+    margin-bottom: 15px;
+}
+form{
+    margin-top: 30px;
+}
+input [type="email"]{
+    width: 500px;
+    padding: 14px 20px;
+    outline: none;
+    border: none;
+    border-radius: 25px;
+    background: #fff;
+    margin-right: 25px;
 
 }
+
+/*Media query for testimonial section */
+
+
+.testimonial-section{
+    width: 90%;
+    min-height: 100vh;
+    margin: 100px auto 0;
+    text-align: center;
+}
+.testimonial-section:after{
+    top: -30px;
+    left: 10px;
+}
+.testimonial-card{
+    width: 350px;
+    height: 230px;
+    margin-bottom: 25px;
+}
+.testimonial-desc{
+    width: 310px;
+}
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -174,6 +344,73 @@ ul.navbar li a:hover{
         display: none;
     }
     /*Media query for section starts here*/ 
+
+
+    .services{
+        width: 85%;
+        margin: 250px auto 0;
+
+    }
+    .service-desc{
+        width: 300px;
+        margin: auto;
+    }
+    .service-desc h2{
+        margin-bottom: 10px;
+        font-size: 1.2rem;
+    }
+    .service-desc p{
+        font-size: 14px;
+        width: 200px;
+        margin: auto;
+    }
+
+    /*Section 3 media query starts here*/
+
+    .section-3{
+        margin-top: 0;
+    }
+    .section-3 img{
+        width: 300px;
+        height:auto;
+    }
+    .section-3-desc h1{
+        font-size: 1rem;
+        margin: 15px 0;
+    }
+    .section-3-desc p{
+        margin-bottom: 30px;
+        font-size: 14px;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
     
 
